--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-font": "~8.4.0",
     "global": "^4.4.0",
     "moment": "^2.24.0",
+    "native-base": "^2.15.2",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
