--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-elements": "^3.1.0",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-reanimated": "^1.13.2",
     "react-native-render-html": "^5.0.1",
     "react-native-safe-area-context": "^3.1.9",
