--- a/app.json
+++ b/app.json
@@ -8,6 +8,7 @@
       "android",
       "web"
     ],
+    "sdkVersion": "40.0.0",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/logo-sm.png",
@@ -23,7 +24,9 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "net.votepurchase.kenmoreader",
+      "buildNumber": "1.0.0"
     },
     "packagerOpts": {
       "config": "metro.config.js",
@@ -36,7 +39,9 @@
       ]
     },
     "android": {
-      "package": "net.votepurchase.kenmoreader"
+      "package": "net.votepurchase.kenmoreader",
+      "versionCode": 1,
+      "permissions": []
     },
     "description": ""
   }
