--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "kenmo-reader",
+    "name": "kenmo reader",
     "slug": "kenmo-reader",
     "privacy": "public",
     "platforms": [
@@ -27,7 +27,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "net.votepurchase.kenmoreader",
-      "buildNumber": "1.0.0"
+      "buildNumber": "1.0.1"
     },
     "packagerOpts": {
       "config": "metro.config.js",
@@ -41,7 +41,7 @@
     },
     "android": {
       "package": "net.votepurchase.kenmoreader",
-      "versionCode": 1,
+      "versionCode": 2,
       "permissions": []
     },
     "description": ""
