--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-asset": "~8.2.1",
     "expo-cli": "^3.20.0",
     "expo-font": "~8.4.0",
+    "expo-haptics": "~8.4.0",
     "global": "^4.4.0",
     "moment": "^2.24.0",
     "native-base": "^2.15.2",
