--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-elements": "^3.1.0",
+    "react-native-embed-instagram": "^0.1.1",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-htmlview": "^0.16.0",
     "react-native-loading-spinner-overlay": "^2.0.0",
@@ -45,6 +46,7 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-native-webview": "^11.0.3",
+    "react-native-webview-bridge": "^0.40.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
