--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-cli": "^3.20.0",
     "expo-font": "~8.4.0",
     "expo-haptics": "~8.4.0",
+    "galio-framework": "^0.7.1",
     "global": "^4.4.0",
     "moment": "^2.24.0",
     "native-base": "^2.15.2",
