--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-autoheight-webview": "^1.5.7",
     "react-native-elements": "^3.1.0",
     "react-native-embed-instagram": "^0.1.1",
     "react-native-gesture-handler": "^1.9.0",
