--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-cli": "^3.20.0",
     "expo-font": "~8.4.0",
     "expo-haptics": "~8.4.0",
+    "firebase": "7.9.0",
     "galio-framework": "^0.7.1",
     "global": "^4.4.0",
     "moment": "^2.24.0",
