--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
   "dependencies": {
     "@native-html/iframe-plugin": "^1.1.1",
     "@native-html/table-plugin": "^3.1.0",
-    "@react-native-async-storage/async-storage": "^1.13.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
-    "expo": "^41.0.0",
-    "expo-asset": "~8.3.1",
+    "expo": "^42.0.0",
+    "expo-asset": "~8.3.2",
     "expo-cli": "^3.20.0",
-    "expo-font": "~9.1.0",
-    "expo-haptics": "~10.0.0",
+    "expo-font": "~9.2.1",
+    "expo-haptics": "~10.1.0",
     "firebase": "8.2.3",
     "galio-framework": "^0.7.1",
     "global": "^4.4.0",
@@ -33,22 +33,22 @@
     "prop-types": "^15.7.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-autoheight-webview": "^1.5.7",
     "react-native-elements": "^3.1.0",
     "react-native-embed-instagram": "^0.1.1",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-htmlview": "^0.16.0",
     "react-native-loading-spinner-overlay": "^2.0.0",
-    "react-native-reanimated": "~2.1.0",
+    "react-native-reanimated": "~2.2.0",
     "react-native-render-html": "^5.0.1",
-    "react-native-screens": "~3.0.0",
+    "react-native-screens": "~3.4.0",
     "react-native-storage": "^1.0.1",
-    "react-native-svg": "12.1.0",
+    "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "11.2.3",
+    "react-native-webview": "11.6.2",
     "react-native-webview-bridge": "^0.40.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
@@ -70,7 +70,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^4.2.5",
-    "jest-expo": "^41.0.0",
+    "jest-expo": "^42.0.0",
     "lint-staged": "^10.2.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
