--- a/package.json
+++ b/package.json
@@ -20,20 +20,20 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
-    "expo": "^42.0.0",
-    "expo-asset": "~8.3.2",
+    "expo": "^43.0.0",
+    "expo-asset": "~8.4.3",
     "expo-cli": "^3.20.0",
-    "expo-font": "~9.2.1",
-    "expo-haptics": "~10.1.0",
+    "expo-font": "~10.0.3",
+    "expo-haptics": "~11.0.3",
     "firebase": "8.2.3",
     "galio-framework": "^0.7.1",
     "global": "^4.4.0",
     "moment": "^2.24.0",
     "native-base": "^2.15.2",
     "prop-types": "^15.7.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.2",
     "react-native-autoheight-webview": "^1.5.7",
     "react-native-elements": "^3.1.0",
     "react-native-embed-instagram": "^0.1.1",
@@ -42,13 +42,14 @@
     "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-render-html": "^5.0.1",
-    "react-native-screens": "~3.4.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.8.0",
     "react-native-storage": "^1.0.1",
     "react-native-svg": "12.1.1",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "~0.13.12",
-    "react-native-webview": "11.6.2",
+    "react-native-web": "0.17.1",
+    "react-native-webview": "11.13.0",
     "react-native-webview-bridge": "^0.40.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
@@ -59,7 +60,7 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-expo": "8.3.0",
+    "babel-preset-expo": "8.5.1",
     "braces": ">=2.3.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
@@ -70,7 +71,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^4.2.5",
-    "jest-expo": "^42.0.0",
+    "jest-expo": "^43.0.0",
     "lint-staged": "^10.2.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
