--- a/package.json
+++ b/package.json
@@ -13,43 +13,43 @@
   "dependencies": {
     "@native-html/iframe-plugin": "^1.1.1",
     "@native-html/table-plugin": "^3.1.0",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/drawer": "^5.11.4",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.1",
-    "expo": "^44.0.0",
-    "expo-asset": "~8.4.4",
+    "expo": "^45.0.0",
+    "expo-asset": "~8.5.0",
     "expo-cli": "^3.20.0",
-    "expo-font": "~10.0.4",
-    "expo-haptics": "~11.1.0",
+    "expo-font": "~10.1.0",
+    "expo-haptics": "~11.2.0",
     "firebase": "8.2.3",
     "galio-framework": "^0.7.1",
     "global": "^4.4.0",
     "moment": "^2.24.0",
     "native-base": "^2.15.2",
     "prop-types": "^15.7.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.1",
     "react-native-autoheight-webview": "^1.5.7",
     "react-native-elements": "^3.1.0",
     "react-native-embed-instagram": "^0.1.1",
-    "react-native-gesture-handler": "~2.1.0",
+    "react-native-gesture-handler": "~2.2.0",
     "react-native-htmlview": "^0.16.0",
     "react-native-loading-spinner-overlay": "^2.0.0",
-    "react-native-reanimated": "~2.3.1",
+    "react-native-reanimated": "~2.8.0",
     "react-native-render-html": "^5.0.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-storage": "^1.0.1",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "12.3.0",
     "react-native-svg-transformer": "^0.14.3",
     "react-native-vector-icons": "^7.1.0",
-    "react-native-web": "0.17.1",
-    "react-native-webview": "11.15.0",
+    "react-native-web": "0.17.7",
+    "react-native-webview": "11.18.1",
     "react-native-webview-bridge": "^0.40.1",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
@@ -60,7 +60,7 @@
   "devDependencies": {
     "babel-eslint": "^10.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    "babel-preset-expo": "9.0.1",
+    "babel-preset-expo": "~9.1.0",
     "braces": ">=2.3.1",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.1.0",
@@ -71,7 +71,7 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^4.2.5",
-    "jest-expo": "^44.0.0",
+    "jest-expo": "^45.0.0",
     "lint-staged": "^10.2.0",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
